...
//        _title = State(wrappedValue: task.taskTitle)
    }
    
    var body: some View {
        Form {
            Section(header: Text("Basic settings")) {
                TextField("Task name", text: $title.onChange(update))
                TextField("Description", text: $detail.onChange(update))
            }
            
            Section(header: Text("Priority")) {
                Picker("Priority", selection: $priority.onChange(update)) {
                    Text("Low").tag(1)
...
