...
import SwiftUI

extension Project {
    static let colors = ["Pink", "Purple", "Red", "Orange", "Gold", "Green", "Teal",
                         "Light Blue", "Dark Blue", "Midnight", "Dark Gray", "Gray"]
    var projectTitle: String {
        title ?? NSLocalizedString("New project", comment: "Add a new project")
    }
    
    var projectDetail: String {
        detail ?? ""
    }
    
...
